# src/controllers/org.controller.ts
@@ -1,6 +1,7 @@
 import { NextFunction, Request, Response } from "express";
 import OrgService from "../services/org.service";
 import { ParsedQs } from "qs";
+import { UpdateGroupDto } from "../dtos/org.dto";
 
 
 
@@ -34,9 +35,10 @@ class OrgController {
 
   public updateOrg = async(req:Request,res:Response,next:NextFunction) => {
     try {
-      
+      const orgData:UpdateGroupDto = req.body;
+      res.json(await this.orgService.updateGroupId(orgData))
     } catch (error) {
-      
+      next(error)
     }
   }
 }
